# FYYYYPPP

./: .gitignore  BACKEND_CODE_WALKTHROUGH.md  commands.txt
Frontend/: index.html  package-lock.json  package.json  vite.config.js
Frontend/src/: App.css  App.jsx  index.css
Frontend/src/components/Chat/: Chat.css  Chat.jsx
Frontend/src/components/Contact/: Contact.css  Contact.jsx
Frontend/src/components/Dashboard/: Dashboard.css  Dashboard.jsx
Frontend/src/components/Home/: Home.css  Home.jsx
Frontend/src/components/Login/: Login.css  Login.jsx
Frontend/src/components/Logout/: Logout.css  Logout.jsx
Frontend/src/components/Reports/: Reports.css  Reports.jsx
Frontend/src/components/Settings/: Settings.css  Settings.jsx
Frontend/src/components/Signup/: Signup.css  Signup.jsx
Frontend/src/components/Training/: Training.css  Training.jsx
Frontend/src/components/Upload/: Upload.css  (+1 more)
Frontend/src/context/: UserContext.jsx
Frontend/videos/: info.json
backendd/: debug_reports.py  migrate_avatar.py  pyproject.toml  requirements.txt  test.py
backendd/app/: main.py
backendd/app/api/: deps.py
backendd/app/api/routers/: auth.py  chat.py  report.py  training.py  users.py  video_predict.py
backendd/app/core/: config.py  security.py
backendd/app/db/: session.py
backendd/app/models/: chat.py  report.py  training.py  user.py
backendd/app/schemas/: chat.py  training.py  user.py
backendd/app/services/: caption_service.py  explainability_assets.py  explanation_service.py  llm_report.py  model_loader.py  session_store.py  video_inference.py
