[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.30.6",
  "pydantic[email]==2.10.6",
  "pydantic-settings==2.7.1",
  "sqlmodel==0.0.22",
  "python-multipart==0.0.9",
  "passlib[bcrypt]==1.7.4",
  "python-jose[cryptography]==3.3.0",
  "email-validator==2.1.0.post1",
  "psycopg[binary]==3.2.1",
  "torch==2.2.2",
  "torchvision==0.17.2",
  "timm==0.9.2",
  "opencv-python==4.9.0.80",
  "numpy==1.26.4",
  "Pillow==10.3.0",
  "groq>=1.0.0",
  "google-generativeai==0.8.4",
  "bcrypt>=4.0.0",
]
